<resources>
    <string name="app_name">TodoList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data_string">No data</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="exit_menu_button">Exit</string>
    <string name="delete_all_menu_button">Delete All</string>
    <string name="add_menu_button">Add</string>
    <string name="update_save_menu_button">Save</string>
    <string name="new_title">New title</string>
    <string name="description_text">Desctiption</string>
    <string name="time_text">14:51</string>
    <string name="last_update_time">Last Update:14.55</string>
    <string name="delete_note_menu">Delete Note</string>
    <string name="no_internet">Нет интернета</string>
    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Proprity</item>
    </string-array>

</resources>